# tensorrt-yolov8-inference

./: .gitignore  CMakeLists.txt  README.md  main.cpp
headers/: FilterByConfidenceCuda.h  coco.h  config.h  getImgParameters.h  getRatioWH.h  logger.h  readme.md  utils.h
models/: .gitignore
src/: FilterByConfidenceCuda.cu  getImgParameters.cpp  getRatioWH.cpp  logger.cpp  utils.cpp
supply_scripts/: build_opencv.sh  gen_onnx.py
